<resources>
    <string name="app_name">meuAutomovel</string>
    <string name="action_settings">Settings</string>
    <string name="inputMediaConsumo">Media geral de consumo</string>
    <string name="postoAbastecimento">Posto</string>
    <string name="title_activity_settings_adicionar_abastecimento">Abastecimento</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="textViewOdometroTotal">Odometro total</string>
    <string name="textViewOdometroParcial">Odometro parcial</string>
    <string name="textViewQuantidadeLitros">Litros abastecidos</string>
    <string name="textViewCustoPorLitro">Custo do litro</string>
    <string name="textViewCustoTotal">Total</string>
    <string name="textViewTipoCombustivel">Tipo de combustível</string>
    <string name="botaoAdicionarMediaConsumo">Adicionar</string>
    <string name="title_activity_consumo_externo_teste">ConsumoExternoTesteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
