<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdicionarAbastecimentoCombustivelActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPosto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postoAbastecimento"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextOdometroTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/textViewOdometroTotal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextOdometroParcial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/textViewOdometroParcial"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextTipoCombustivel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/textViewTipoCombustivel"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextQuantidadeLitros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/textViewQuantidadeLitros"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextCustoPorLitro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/textViewCustoPorLitro"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextCustoTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/textViewCustoTotal"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/buttonAdicionarMediaConsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botaoAdicionarMediaConsumo" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>